force-app/main/default/objects/HS_Region__c/HS_Region__c.object-meta.xml
<CustomObject>
    <label>HS Region</label>
    <nameField>
        <label>HS Region Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HS Regions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>