force-app/main/default/objects/HS_Region__c/fields/HS_Division__c.field-meta.xml
<CustomField>
    <fullName>HS_Division__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HS Division</label>
    <referenceTo>HS_Division__c</referenceTo>
    <relationshipLabel>HS Regions</relationshipLabel>
    <relationshipName>HS_Regions</relationshipName>
    <type>Lookup</type>
</CustomField>