force-app/main/default/objects/HS_Region__c/fields/HS_Division_Code__c.field-meta.xml
<CustomField>
    <fullName>HS_Division_Code__c</fullName>
    <formula>HS_Division__r.HS_Division_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HS Division Code</label>
    <type>Text</type>
</CustomField>