force-app/main/default/objects/HS_Region__c/fields/HS_Region_Code__c.field-meta.xml
<CustomField>
    <fullName>HS_Region_Code__c</fullName>
    <label>HS Region Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>